<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/Monday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView1"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/halfsun"
                android:id="@+id/imageView1"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="20 C - 30 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/sunny"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView15"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:text="@string/Tuesday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView5"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/sunshine"
                android:id="@+id/imageView2"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="25 C - 33 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/sunshine"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView19"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView6"
                android:text="@string/Wednesday"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/windy"
                android:id="@+id/imageView3"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="22 C - 31 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/windy"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView20"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:text="@string/Thursday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView8"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/halfsun"
                android:id="@+id/imageView4"
                tools:ignore="ContentDescription"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="23 C - 30 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/sunny"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView21"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:text="@string/Friday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView3"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/rain"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="18 C - 26 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/rainy"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView22"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/Saturday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView11"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/snow"
                android:id="@+id/imageView6"
                tools:ignore="ContentDescription"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="12 C - 17C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/snowy"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView23"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:text="@string/Sunday"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/textView16"
                android:gravity="center"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/windy"
                android:id="@+id/imageView17"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="19 C - 27 C"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView18"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:text="@string/windy"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/textView24"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>